--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2"
   },
   "scripts": {
